# mirascope-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yml  tests.yml
docs/: README.md
examples/prompt_cli/: requirements.txt
mirascope_cli/: __init__.py  enums.py  schemas.py  utils.py
mirascope_cli/commands/: init.py
tests/: conftest.py  test_utils.py
tests/commands/: test_add.py  test_init.py  test_remove.py  test_status.py  test_use.py
tests/commands/golden/base_prompt/: 0001_base_prompt.py  0002_base_prompt.py
tests/commands/golden/base_prompt_auto_tag/: 0001_base_prompt_auto_tag.py  0002_base_prompt_auto_tag.py
tests/commands/golden/base_prompt_with_decorator/: 0001_base_prompt_with_decorator.py  0002_base_prompt_with_decorator.py
tests/commands/golden/call_with_variables/: 0001_call_with_variables.py  0002_call_with_variables.py  call_with_variables.py
