[tool.poetry]
name = "mirascope-cli"
version = "0.1.2"
description = "The Mirascope Command Line Interface"
license = "MIT"
authors = [
    "William Bakst <william@mirascope.io>",
    "Brendan Kao <brendan@mirascope.io>",
]
readme = "docs/README.md"
packages = [{ include = "mirascope_cli" }]
repository = "https://github.com/Mirascope/mirascope-cli"

[tool.poetry.scripts]
mirascope = 'mirascope_cli.main:app'

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pydantic = "^2.0.2"
typer = { version = ">=0.9.0,<1.0.0", extras = ["all"] }
Jinja2 = "^3.1.3"

[tool.poetry.group.dev.dependencies]
# mirascope = ">=0.9.1,<1.0.0"
mypy = "^1.6.1"
pytest = "^7.4.0"
ruff = "^0.1.5"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"

[tool.poetry.group.docs.dependencies]
mike = "^2.0.0"
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.18"
mkdocstrings = "^0.22.0"
mkdocstrings-python = "^1.1.2"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
line-length = 88
target-version = "py38"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
exclude = ["venv", "virtualenvs"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
